[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/GuiDebug.gd" type="Script" id=1]
[ext_resource path="res://assets/gui/font_default.tres" type="DynamicFont" id=2]

[node name="GuiDebug" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -512.0
margin_bottom = -512.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1376.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DisplayFramerate" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_right = 1376.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = " 00"
tab_size = 5
text = " 00"

[node name="DisplayWorldClock" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 1376.0
margin_bottom = 266.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
tab_size = 5
text = "  00:00:00"

[node name="DisplayPlayTime" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 1376.0
margin_bottom = 401.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "  00:00:00"
tab_size = 5
text = "  00:00:00"

[node name="DisplayPlayerState2" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = 405.0
margin_right = 1376.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = " ????"
tab_size = 5
text = " ????"
